# ChangeLog for sys-libs/talloc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/talloc/ChangeLog,v 1.77 2014/10/11 12:05:25 maekke Exp $

  11 Oct 2014; Markus Meier <maekke@gentoo.org> talloc-2.1.0-r1.ebuild:
  arm stable, bug #512012

  11 Oct 2014; Markus Meier <maekke@gentoo.org> talloc-2.0.8-r1.ebuild:
  arm stable, bug #512012

  15 Sep 2014; Agostino Sarubbo <ago@gentoo.org> talloc-2.0.8-r1.ebuild,
  talloc-2.1.0-r1.ebuild:
  Stable for sparc, wrt bug #512012

  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org> talloc-2.0.8-r1.ebuild,
  talloc-2.1.0-r1.ebuild:
  Stable for alpha, wrt bug #512012

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> talloc-2.0.8-r1.ebuild,
  talloc-2.1.0-r1.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> talloc-2.0.8-r1.ebuild,
  talloc-2.1.0-r1.ebuild:
  Stable for ppc64, wrt bug #512012

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> talloc-2.1.0-r1.ebuild:
  Stable for HPPA (bug #512012).

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> talloc-2.0.8-r1.ebuild,
  talloc-2.1.0-r1.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> talloc-2.0.8-r1.ebuild,
  talloc-2.1.0-r1.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> talloc-2.0.8-r1.ebuild,
  talloc-2.1.0-r1.ebuild:
  Stable for amd64, wrt bug #512912

  10 Jun 2014; Mike Frysinger <vapier@gentoo.org> talloc-2.0.8-r1.ebuild,
  talloc-2.0.8.ebuild, talloc-2.1.0-r1.ebuild, talloc-2.1.0.ebuild,
  talloc-2.1.1.ebuild:
  Add arm64/m68k love.

*talloc-2.1.1 (23 May 2014)

  23 May 2014; Lars Wendler <polynomial-c@gentoo.org> +talloc-2.1.1.ebuild:
  Version bump.

*talloc-2.1.0-r1 (14 May 2014)

  14 May 2014; Michał Górny <mgorny@gentoo.org> +talloc-2.1.0-r1.ebuild:
  Enable multilib support, bug #491222. Clean up Python deps.
