@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup unpack
-DEPEND=!!<sys-libs/talloc-2.0.5 dev-libs/libxslt || ( dev-lang/python:2.7[threads] dev-lang/python:2.6[threads] ) dev-lang/python !dev-lang/python[-threads] python? ( || ( =dev-lang/python-2.7* =dev-lang/python-2.6* ) )
-DESCRIPTION=Samba talloc library
-EAPI=3
-HOMEPAGE=http://talloc.samba.org/
-IUSE=compat +python
-KEYWORDS=alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~x64-macos ~sparc-solaris
-LICENSE=GPL-3
-RDEPEND=!!<sys-libs/talloc-2.0.5 python? ( || ( =dev-lang/python-2.7* =dev-lang/python-2.6* ) )
-SLOT=0
-SRC_URI=http://samba.org/ftp/talloc/talloc-2.0.8.tar.gz
-_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python	cd022f89fef846d083fc994b9e3d8c04	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	waf-utils	b5ddb40c4095c9a1a3f6fd49d32fd922
-_md5_=326787e0c151f60f262dc93864695a6f
