@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup unpack
-DEPEND=>=dev-lang/python-2.7.5-r2:2.7[threads] >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] !!<sys-libs/talloc-2.0.5 sys-devel/gettext dev-libs/libxslt || ( dev-lang/python:2.7[threads] dev-lang/python:2.6[threads] ) dev-lang/python !dev-lang/python[-threads]
-DESCRIPTION=Samba talloc library
-EAPI=5
-HOMEPAGE=http://talloc.samba.org/
-IUSE=compat +python python_targets_python2_7
-KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux ~x64-macos ~sparc-solaris
-LICENSE=GPL-3
-RDEPEND=>=dev-lang/python-2.7.5-r2:2.7[threads] >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] !!<sys-libs/talloc-2.0.5
-REQUIRED_USE=python_targets_python2_7
-SLOT=0
-SRC_URI=http://samba.org/ftp/talloc/talloc-2.1.0.tar.gz
-_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-single-r1	f782db6207752efeca1d59c016d8c813	python-utils-r1	e3288bc2e6e487674ce218b632701c9e	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	waf-utils	b5ddb40c4095c9a1a3f6fd49d32fd922
-_md5_=9ce7e3b4e776206c679491abb1874666
