@@ -1,20 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST talloc-2.0.8.tar.gz 433489 SHA256 1ec11e635e0318dbbb014db38ff96e8dba3ce5f614eeb7d993b4a5b71c016783 SHA512 8e8e71d05443b7ea5d8ac432c1043840000b7b6ebeff6a2f621274f29a298e6c64ad5fb75b59c6138179c5602d6164695b85b57b5b310809150320b6eecd487f WHIRLPOOL 4cfaab8edbb7040ff0319ff7bce54657e3ecdfd27792b6ad0b5d789b38579116f69023def228e725d03a6c226ded768cfcdede920162930179704481160b9e81
 DIST talloc-2.1.0.tar.gz 416097 SHA256 0701393882647f823503e3aa075bc67d75c194b376822377dae2d20f9130f08f SHA512 7bdc448c91211299edf16502d263362ac660d5123d8ea7bb2ed58af2231537e4f29da5384b8d5be10254a02b193520890e95a73d697c40eba09728a9b6d56d57 WHIRLPOOL d8593cba27f5d971acb39acacdbea70df5b80ed31288cf440a2ebeaca266e070deeea8322f4ba5682580f66044128f18dd6d76b735aa0670aed46f13f5a4e857
 DIST talloc-2.1.1.tar.gz 418564 SHA256 3e29ce6c3ba3c4f7c2d57ce8cf0fbc24c86618c519f2b2fb6a459025488b6174 SHA512 92aac5e5a759c65733260152980f798a5bf06bcbe8a58c23cbae91dd741306c097499a063410c4fa01f1b25db7d965666f94e1c181922694ed3f638a312d809d WHIRLPOOL bde73d40bfce159446b553872d44328f011065fef0f0933d26e6499ebbd7f1ee958082930d7b342b9ef9c89dfbfb696497b0145f2e3b456e779ffe8def5d2c2f
-EBUILD talloc-2.0.8-r1.ebuild 2014 SHA256 9f2d8213be527c5c8207fdca759946b4b92ece79d076f45f5ec63027a9416abd SHA512 13f5d78f0ce8728b2fd22a76f49cc1b8c0d3a82057003a745bc1c54bafa8110c7a631683fed347eab9514e8b30e19b713edb11124c0e062c6acdd4d6c3e40884 WHIRLPOOL dd4b27478515dda90caa60fc02a31ac18174dd0729b7ca86de0bf23dae5cdce039fe3c387b1309260333bb40d466d4ee2af011b1c7cc69255a84a6f70d5061a1
-EBUILD talloc-2.0.8.ebuild 2078 SHA256 8f2a58e82b0225d84e99a643abe20d57e7448e2d07f596c07a44282fcb65fb25 SHA512 8e6d3b7bb35264cc2dee4eb555d5f58ee656ba22431c10d0d5698d632a7d7e05f6bcd450544e5823fb8a6965df14a7e14d714a1491062d17ef880589f6693777 WHIRLPOOL 39bc827208e657a59febd7e0c71e5783b31d65e8b5c7321b2dcce219294f35427fb61d6efb552402a1f16e47d58029ee8f3fcf3dfa3ca6961f382efcef81caa8
+DIST talloc-2.1.2.tar.gz 423706 SHA256 230d78a3fca75a15ab0f5d76d7bbaeadd3c1e695adcbb085932d227f5c31838d SHA512 9bb3b8a1be663b63c03ec3336de2e4941052012357dacd0f4303ebb0c4d7f84fb7425bece114fda67167624ea417f57b33dfd5a8f373178c044f8270fecd596a WHIRLPOOL 464ead270ef6e315316505eb287eb8c3647d0807ace35a8b8f3fcf9697aeeac85ba652b56a5ae7a58d7eada7d2fd8cb33ee1032b912a7ee83eee74df8eadb349
 EBUILD talloc-2.1.0-r1.ebuild 2452 SHA256 5cc46d8b1665ad1fc7ddc3ec2d3ec1d19217bc44332bf39b606b8e26de7914bd SHA512 5f22885448c4e889107041c4a44e938b760453e9aee4b5eca5831084a82b8055bd1add507da720f80259325d41e9aec30fea57703ac52109fd492884b1da2f6a WHIRLPOOL f7bb64e4f38ebd22e67cd463936fb913ff63ab7acb19808358d054a43f635d19c238eaf3d91b2696a267b64c9d6a0552e29f6dfc583feb0f34692c4fc9d6414c
-EBUILD talloc-2.1.0.ebuild 2038 SHA256 e887510376ecb82a1f0295a8c23b012b019ef877ab1503bbe9bee7cf2e49b05e SHA512 a7ee6319bad747b2e93a2327b4f40bfc0ea2fd99128f440674d8915ec96fd6ed49f90197bedfcba36a0e34624edc5084b5196fe7b6574b776118f1da28b6a092 WHIRLPOOL 96119c8f8393d6a3b1eb5e4733d7dcdab1a12979978c2e3785dd2f43cef51b15d868bf2fa86bd59ee72e0fe8ec67ffe2418b02a9250e708c9be3b8214c9a83df
 EBUILD talloc-2.1.1.ebuild 2457 SHA256 9e666b2cc4317b6f394a13e1f812b5c497b93551e831446da28b4d57a3a52d13 SHA512 d721daaea1ec7fce45823ac304038a484902f8a04b98af150e00c5b5726d16ba414ec47845db9ca4020dd775469693cb87bb4e4b01749483fa15b651e650e9b6 WHIRLPOOL db8f50239107d5969218344cc13f1390e71bc2f8e8406222740cc6e37791a0078d7de2c63702b28cf13c2de8bc2dba544b6b2695abc853ebb110e4146ef28beb
-MISC ChangeLog 10579 SHA256 cb23d75bd9d06cb390326cb5e60e53773b8e9e4f70a445f6ca004d0ebb3538e1 SHA512 132ea8c342d2d4ec44ec03b6bc583a4802433b4fa74a72abdfaaed7668bd3e3e7742454be2c3ae6a5d5cf07c55638f0055133425de3970ce8024311f9297854b WHIRLPOOL 01a14ac421507e2a249315fb22fc1250302a56396df0b855425e4f51142f4727826fcc55117fab329f4600cdb5454c9b7180156b37ea25307cb0f7b0d983f345
+EBUILD talloc-2.1.2.ebuild 2463 SHA256 8c7f68132e50ab30ba36caaef00c44d0e416a0d09c3989b3f2ce5162e14fc706 SHA512 56064adf8b62981e366e21e40828a2f5ed18403103b3ea54564058abfd959193c3f28f044b940983abb59e5710452a8f6db6329ad75a52c93bb58c0237f077ef WHIRLPOOL 10decd823e7458e8a5ce048242eb1f254d1c75cbeecedba03848deebea60b1b19d5b2cee8729d37b9ae57b982198961b8cecb07624c7599e74021726829f26da
+MISC ChangeLog 10791 SHA256 7dc4f75b56156e0806e53b0127af5c95d265087cd7c0b439ffde8f351afed7a2 SHA512 d62ae9fbf5d86568756b7c72a29ed9be75bad460ae1aab01d369632ec27dad18ae8c795a2604dab55d1472a5508e19e5695aa214c3bd080363c6bd49b93b65c3 WHIRLPOOL b569c24ce65f8396e294cddb6dfbecf0470f889b7fd6348569c3e0db3fcb732750f3798d5f83ae6f72b1f4f5e6a8de7e3749159b69c80c62ee7ee972521980a6
 MISC metadata.xml 341 SHA256 f12826bad0472c46c8bd1ee18e7ab0acdc4cf26dd8b1322b1a93ff7c95b14a7e SHA512 dd141022832b17bc47f40cc940c2165c849b5ad786df5cbba7685da4543a8969ed992fb9dda3a136d045418f6de731c83909f3d02fd3ad2dee4d0ab4689b0c44 WHIRLPOOL 1fff0d00542a6e5b3f64edb985e53fe978a9d91dde0b0118cf790dc113a1a3e3fd01632f2f19517af9b47fef51902de579e43c30eaedf3fa298230848cb125a3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQ5HQcACgkQkKaRLQcq0GLA0wCfZBW5ylMLZ4S0PFP/ny4jAush
-gOwAnRuJqpyN3XPr5y4vrW8GjLDAUdXn
-=l6B1
+iQIcBAEBCAAGBQJVAasHAAoJEPiazRVxLXTFdFoP+QH+QGNNpFsHldZREiS2v/3k
+3J7sKjo9DTWaidaJiAe96FksiwJHCDHcqVeVO3nT2r7cKfDJWLS/AgMFEom3FdlB
+VjXX3lWSorbsA22UFbue+TQdQaLF9TDDE26GDulqMGhXNT1FrcwR9onn4RRV2YAR
+bO3Q5/k8P+xuj1KajXqdvR3RwKZQj4P+tjlm/3CMKPduFHo5sGVvnXr6Q51EFD7r
+MnW/jh0Y/SKmPYNBcX94WaCOghRUI7xac3PCrENCfv7SzxVpOudXzN1+7vVmugLp
+QB3P9cfllLnelfiUwHW+z1isCoN3UfXdPZxoyt4IaZrdiO8XYSOcqe4Jq67uxbtM
+TUfwtQ4OAYyP3spa4QfH9yKFv9zaNPuG0qauSnrhBCwEUnSIDHFbinyMsI4LCzcG
+S3QRrEiNlmFVia5tLh1q4hTT9JoSoVowCENQ7Qu+ItmK02X2EhNSlPG6MJgruz/x
+g7f29lazzmLF0ZS5qDpSTaS+ukpSuWQz2WXpZ8pEsTNrp9CPMBEOrpZ64X9yJv2X
+TE50LUBypkuURHK5hvKYI4KceBXr3sL4vuVgHA27qDDCrrjbCREM8GoaaH0IGq/t
+3epZ3uCTInT9NcFjZDdTfzCbuogAQIuxd19RsSiR9skY63Lc5xaokHQfqwOjKjol
+wTMI4xxMkAcmbFFKTB6Q
+=v+8z
 -----END PGP SIGNATURE-----
