@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/talloc
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/talloc/ChangeLog,v 1.77 2014/10/11 12:05:25 maekke Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/talloc/ChangeLog,v 1.78 2015/03/12 15:04:38 polynomial-c Exp $
+
+*talloc-2.1.2 (12 Mar 2015)
+
+  12 Mar 2015; Lars Wendler <polynomial-c@gentoo.org> -talloc-2.0.8.ebuild,
+  -talloc-2.0.8-r1.ebuild, -talloc-2.1.0.ebuild, +talloc-2.1.2.ebuild:
+  Version bump. Removed old.
 
   11 Oct 2014; Markus Meier <maekke@gentoo.org> talloc-2.1.0-r1.ebuild:
   arm stable, bug #512012
